fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@ ul {
   letter-spacing: 0.03em;
   color: #4d5ae5;
 }
-
 .logo-header-accent {
   color: #2e2f42;
 }
@@ -39,7 +38,6 @@ ul {
   color: #2e2f42;
   letter-spacing: 0.02em;
 }
-
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
@@ -52,7 +50,6 @@ ul {
 .address {
   font-style: normal;
 }
-
 .adrs-link:hover,
 .adrs-link:focus {
   color: #404bbf;
@@ -71,6 +68,7 @@ ul {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
+  letter-spacing: 0.02em;
   color: #ffffff;
 }
 
@@ -93,6 +91,7 @@ ul {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
 }
@@ -101,6 +100,7 @@ ul {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
